crates/warp_i18n/tests/compile_fail/t_macro_rejects_expr.stderr
error: expected string literal
 --> tests/compile_fail/t_macro_rejects_expr.rs:9:21
  |
9 |     let _label = t!(get_key()); //~ ERROR
  |                     ^^^^^^^
